<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_Inicio" />
        <item
            android:id="@+id/nav_pendientes"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_Servicios" />
        <item
            android:id="@+id/nav_clientes"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_clientes" />
        <item
            android:id="@+id/nav_mapa"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_map" />
        <item
            android:id="@+id/nav_novedades"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_Novedades" />
    </group>

    <item android:title="Comunicar">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_share" />
            <item
                android:id="@+id/nav_sesion"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_CerrarSesion" />
        </menu>
    </item>

</menu>
